commit for assessment

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <title>Rossum's Universal Restaurant</title>
     <link id="s1" rel="stylesheet" href="./assets/css/style1.css">
     <link id="s2" rel="stylesheet" href="./assets/css/style2.css" disabled=true>
+    <link id="s3" rel="stylesheet" href="./assets/css/style3.css" disabled=true>
 </head>
 <body>
     <div id="main">
         <header>
                 <nav>
-                    Style:
-                    <a href="javascript:s1.disabled=false; s2.disabled=true;">One</a>
-                    <a href="javascript:s2.disabled=false; s1.disabled=true;">Two</a>
+                    Style: &nbsp;
+                    <a href="javascript:s1.disabled=false; s2.disabled=true; s3.disabled=true;">One</a>
+                    &nbsp;
+                    <a href="javascript:s2.disabled=false; s1.disabled=true; s3.disabled=true;">Two</a>
+                    &nbsp;
+                    <a href="javascript:s3.disabled=false; s1.disabled=true; s2.disabled=true;">Three</a>
                 </nav>
                 <h1>Rossum's Universal Restaurant</h1>
         </header>
